#      Copyright João Vitor Cunha Assumpção 2023.
# Distributed under the Boost Software License, Version 1.0.
#    (See accompanying file LICENSE_1_0.txt or copy at
#          https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "raytracer"
version = "0.8.0"
edition = "2021"
authors = ["João Vitor Cunha Assumpção"]
readme = "README.md"
repository = "https://github.com/joaovitorassumpcao/raytracer"
license = "BSL-1.0"

[dependencies]
image = "0.24.5"
derive_more = "0.99.17"
rayon = "1.6.1"
rand = "0.8.5"
indicatif = {version = "0.17.3", features = ["rayon"]}

[build]
rustc-wrapper = "sccache"
